# ml-linalg

./: .gitignore  CMakeLists.txt  CMakePresets.json  LINALG_BOOST_UBLAS.md  README.md  vcpkg.json
data/: net-save-RU-QC.txt  net-save-Sig-CEC.txt  net-save-Sig-QC.txt  net-save-Tanh-CEC.txt  net-save-Tanh-QC.txt  net-save.txt
example/: CMakeLists.txt  NeuralNet3.cpp  mnist_loader.h
include/: NeuralNet.h
tests/: CMakeLists.txt  mnist_loader.h  test1.cpp
